--- a/SimpleDemo.UI/Views/Setting/SettingTimeView.xaml
+++ b/SimpleDemo.UI/Views/Setting/SettingTimeView.xaml
@@ -1,12 +1,14 @@
-﻿<UserControl x:Class="SimpleDemo.UI.Views.SettingTimeView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" xmlns:ViewModels="clr-namespace:SimpleDemo.UI.ViewModels"
+             xmlns:dxprg="http://schemas.devexpress.com/winfx/2008/xaml/propertygrid" x:Class="SimpleDemo.UI.Views.SettingTimeView"
              mc:Ignorable="d"
-             DataContext="{dxmvvm:ViewModelSource Type=ViewModels:SettingTimeViewModel}"
+             DataContext="{dxmvvm:ViewModelSource Type={x:Type ViewModels:SettingTimeViewModel}}"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
+        <dxprg:PropertyGridControl SelectedObject="{Binding LightSettingItem}"/>
     </Grid>
 </UserControl>
