--- a/SimpleDemo.UI/Views/Setting/SettingPortView.xaml
+++ b/SimpleDemo.UI/Views/Setting/SettingPortView.xaml
@@ -11,7 +11,7 @@
     <UserControl.Resources>
         <DataTemplate x:Key="PropertyDetailTemplate">
             <dxprg:PropertyGridControl SelectedObject="{Binding EditableObject, Converter={dxprg:EditableObjectConverter}}"
-                                       IsEnabled="{Binding IsEnabled}"
+                                       
                 ShowCategories="False"
                 ShowSearchBox="False"
                 ShowToolPanel="False"
@@ -24,35 +24,46 @@
                 <dxprg:PropertyDefinition Path="DataBits" Header="数据位"  />
                 <dxprg:PropertyDefinition Path="Parity" Header="奇偶校验"  />
                 <dxprg:PropertyDefinition Path="StopBits" Header="停止位"  />
+                <dxprg:PropertyDefinition Path="ProtocolType" Header="协议类型"/>
             </dxprg:PropertyGridControl>
         </DataTemplate>
+        <ControlTemplate x:Key="DataLayoutItemControlTemplate1" TargetType="{x:Type dxlc:DataLayoutItem}">
+            <Grid>
+                <Button>assssssssss</Button>
+            </Grid>
+        </ControlTemplate>
     </UserControl.Resources>
     <Grid>
-        <!--<Grid.RowDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>-->
-        <!--<dxlc:DataLayoutControl Grid.Row="0" CurrentItem="{Binding LightSettingItem}" AutoGenerateItems="False">
-            <dxlc:DataLayoutItem Binding="{Binding LatticeScreen}" />
-            <dxlc:DataLayoutItem Binding="{Binding LightDevice}"/>
-        </dxlc:DataLayoutControl>-->
+        </Grid.RowDefinitions>
+        <dxlc:DataLayoutControl Grid.Row="0" CurrentItem="{Binding Items}" AutoGenerateItems="True">
+            <!--<dxlc:DataLayoutItem Binding="{Binding PortName}" />
+            <dxlc:DataLayoutItem Binding="{Binding BaudRate}" />
+            <dxlc:DataLayoutItem Binding="{Binding DataBits}" />
+            <dxlc:DataLayoutItem Binding="{Binding Parity}" />
+            <dxlc:DataLayoutItem Binding="{Binding ProtocolType}" />-->
+            <!--<dxlc:DataLayoutItem Binding="{Binding LatticeScreen}"/>
+            <dxlc:DataLayoutItem Binding="{Binding LightDevice}"/>-->
+        </dxlc:DataLayoutControl>
 
-        <dxprg:PropertyGridControl SelectedObject="{Binding LightSettingItem}" 
+        <!--<dxprg:PropertyGridControl SelectedObject="{Binding LightSettingItem}" 
                                    ShowCategories="True"
                                     ExpandCategoriesWhenSelectedObjectChanged="True"
                                     ShowMenuButtonInRows="False">
             <dxprg:PropertyDefinition  Path="LatticeScreen"  ShowChildren="False" ContentTemplate="{DynamicResource PropertyDetailTemplate}" />
             <dxprg:PropertyDefinition Path="LightDevice" ShowChildren="False" ContentTemplate="{DynamicResource PropertyDetailTemplate}" />
             <dxprg:PropertyDefinition Path="Photoelectric"  ShowChildren="False" ContentTemplate="{DynamicResource PropertyDetailTemplate}" />
-            <dxprg:PropertyDefinition Path="" />
+            <dxprg:PropertyDefinition Path="*" />
 
-        </dxprg:PropertyGridControl>
+        </dxprg:PropertyGridControl>-->
 
-        <!--<dxprg:PropertyGridControl ExpandCategoriesWhenSelectedObjectChanged="True"   SelectedObject="{Binding LightSettingItem}" ShowCategories="True" />-->
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button>取消</Button>
+            <Button>保存</Button>
+        </StackPanel>
+
 
     </Grid>
 </UserControl>
